[tool.poetry]
name = "authors-src"
version = "0.1.0"
description = ""
authors = ["nikhil <nikhil.bhardwaj@sveltetech.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-environ = "0.8.1"
djangorestframework = "3.12.4"
django-cors-headers = "3.10.1"
django-filter = "21.1"
django-autoslug = "1.9.8"
django-countries = "7.2.1"
django-phonenumber-field = "5.2.0"
phonenumbers = "8.12.33"
drf-yasg = "1.20.0"
Pillow = "9.0.0"
argon2-cffi = "^21.3.0"
pytz = "^2022.2.1"
flake8 = "^5.0.4"
psycopg2 = "^2.9.3"
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
